force-app/main/default/objects/ssot__AssessmentActionItem__dlm/fields/ssot__AssessmentActionItemCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentActionItemCategory__c</fullName>
    <label>Assessment Action Item Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentActionItemCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>