force-app/main/default/objects/ssot__AssessmentActionItem__dlm/fields/ssot__AssessmentActionItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentActionItemStatus__c</fullName>
    <label>Assessment Action Item Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentActionItemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>