force-app/main/default/objects/ssot__AssessmentActionItem__dlm/fields/ssot__AssessmentDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentDefinitionId__c</fullName>
    <label>Assessment Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>