force-app/main/default/objects/ssot__AssessmentActionItem__dlm/fields/ssot__rel_1720291280132_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291280132_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentActionItem_AssessmentId_ma_rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>AssessmentActionItem_AssessmentId_ma_rel</relationshipLabel>
    <relationshipName>rel_1720291280132_end</relationshipName>
    <type>Lookup</type>
</CustomField>